--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <div class = "About Coding">
-        
+     <p>
+        I am in major of computer science 
+     </p>   
     </div>
 </body>
 </html>
