--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class = "About Coding">
      <p>
         I am in major of computer science 
+        I like basketball
      </p>   
     </div>
 </body>
