--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class = "About Coding">
      <p>
         I am in major of computer science 
-        I like basketball
+        It is my first time to do coding
      </p>   
     </div>
 </body>
