--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
      <p>
         I am in major of computer science 
         It is my first time to do coding
+        It is quite hard to do such things
      </p>   
     </div>
 </body>
