--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         I am in major of computer science 
         It is my first time to do coding
         It is quite hard to do such things
-        But I con overcome this obstacles
+        But I can overcome this obstacles
      </p>   
     </div>
 </body>
