--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         It is my first time to do coding
         It is quite hard to do such things
         But I can overcome this obstacles
-     </p>   
+     </p>  
+     <div class = "About Myself">
+         
+     </div> 
     </div>
 </body>
 </html>
