--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
      </p>  
      <div class = "About Myself">
         I am 20 years old
+        I like to play basketball
          
      </div> 
     </div>
