--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
      <div class = "About Myself">
         I am 20 years old
         I like to play basketball
+        I prefer hiphop to classic
          
      </div> 
     </div>
