--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
         It is my first time to do coding
         It is quite hard to do such things
         But I can overcome this obstacles
-     </p>  
+     </p>
+    </div>  
      <div class = "About Myself">
+       <p>
         I am 20 years old
         I like to play basketball
         I prefer hiphop to classic
-         
-     </div> 
+       </p>
+    </div>
+    <div class = "About Basketball">
+        <P>
+            
+        </P>
     </div>
 </body>
 </html>
