--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
     <div class = "About Basketball">
         <P>
+         I started basketball when I was 13
             
         </P>
     </div>
