--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class = "About Basketball">
         <P>
          I started basketball when I was 13
-            
+         I play as a guard   
         </P>
     </div>
 </body>
