--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div class = "About Basketball">
         <P>
          I started basketball when I was 13
-         I play as a guard   
+         I play as a guard 
+         I am the best in the world  
         </P>
     </div>
 </body>
