--- a/index.html
+++ b/index.html
@@ -6,19 +6,27 @@
     <title>gitPractice</title>
 </head>
 <body>
-    <div class = "About Coding">
+     <div class = "About Coding">
      <p>
         I am in major of computer science 
         It is my first time to do coding
         It is quite hard to do such things
         But I can overcome this obstacles
-     </p>  
+     </p>
+    </div>  
      <div class = "About Myself">
+       <p>
         I am 20 years old
         I like to play basketball
         I prefer hiphop to classic
-         
-     </div> 
+       </p>
     </div>
-</body>
+    <div class = "About Basketball">
+        <P>
+         I started basketball when I was 13
+         I play as a guard 
+         I am the worst in the world  
+        </P>
+    </div>
+ </body>   
 </html>
